# networkAlerte

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.lan.yml  docker-compose.prod.yml  docker-compose.public.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 176fd9e17047_remove_is_suspended_from_devices.py  1ead65fa554c_add_parent_id_to_devices.py  (+71 more)
backend/app/: main.py
backend/data/: .gitignore  README.md
backend/scripts/: backfill_journal_source.py  block_clients.py  block_out_of_supervision.py  clear_unverified_ips.py  clients_to_block.csv  clients_to_block_2026_07_14.csv  compare_active_macs.py  create_admin.py  find_missing_macs.py  ltu_dump_linkquality.py  seed_devices.py  unblock_clients.py
backend/tests/: conftest.py  test_access_diagnostics.py  test_airos_ap_stations.py  test_airos_api_service.py  test_alert_correlation.py  test_alert_engine.py  test_alert_engine_integration.py  test_alert_formatter.py  test_alert_policy.py  test_alert_policy_overrides.py  test_alert_rules.py  test_block_identity_guard.py  test_clear_unverified_ips.py  test_client_signal_latency.py  test_digest.py  test_discovery_service.py  test_incident_service.py  test_ltu_api_service.py  test_management_ip_guard.py  test_notification_channels.py  test_out_of_supervision.py  test_router_block_fallback.py  test_ssh_service.py  test_throughput_derivation.py  test_uisp_attribution_adoption.py
docs/: next-steps.md  (+9 more)
(+192 files in other folders)
